# Codex-Tray

./: .gitignore  LICENSE  README.md  codex_tray.py  config.py  icon_renderer.py  install.sh  pyproject.toml  usage_tracker.py
.github/workflows/: release.yml
ai_usage_tray/: __init__.py  __main__.py  cache.py  config.py  icon_renderer.py  settings.py  setup_dialog.py  tray_app.py
ai_usage_tray/providers/: base.py  codex.py  opencode_go.py  registry.py
autostart/: ai-usage-tray.desktop  codex-tray.desktop
scripts/: build-deb.sh
tests/: test_ui_usage_summary.py
