[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-tray"
version = "0.1.0"
description = "Linux system-tray monitor for ChatGPT Codex CLI usage"
requires-python = ">=3.10"

[project.scripts]
codex-tray = "codex_tray:main"

[tool.setuptools]
py-modules = ["codex_tray", "usage_tracker", "icon_renderer", "config"]
