[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-usage-tray"
version = "0.2.0"
description = "Linux system-tray monitor for AI coding assistant usage"
requires-python = ">=3.10"

[project.scripts]
ai-usage-tray = "ai_usage_tray.tray_app:main"

[tool.setuptools]
packages = ["ai_usage_tray", "ai_usage_tray.providers"]
